# Package metadata
[metadata]
name = scikit-lr
version = attr: sklr.__version__
author = Juan Carlos Alfaro Jiménez
author_email = JuanCarlos.Alfaro@uclm.es
maintainer = Juan Carlos Alfaro Jiménez
maintainer_email = JuanCarlos.Alfaro@uclm.es
license = MIT
license_files = COPYING
description = Machine Learning package for Label Ranking problems in Python.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = posix

url = https://scikit-lr.readthedocs.io
download_url = https://pypi.org/project/scikit-lr
project_urls =
    "Source Code" = https://github.com/alfaro96/scikit-lr
    "Bug Tracker" = https://github.com/alfaro96/scikit-lr/issues

classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

# Packaging options
[options]
zip_safe = False  # Make cimport work for header files
include_package_data = True
packages = find:

# Minimum runtime requirements
python_requires = >=3.7
install_requires =
    numpy>=1.14.6
    scipy>=1.1.0
    scikit-learn>=0.24.0

# Test suite options
[tool:pytest]
addopts =
    --doctest-modules
    --ignore docs
    -rxXs

# Code coverage options
[coverage:run]
branch = True
source = sklr
parallel = True
omit =
    setup.py
    */sklr/_build_utils/*
